<resources>
    <string name="app_name">Proyecto DAM Manuel Gongora</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- activity_inicio -->
    <string name="titulo">Style Peak</string>

    <!-- activity_login -->
    <string name="eti_login_user">Email</string>
    <string name="eti_login_password">Contraseña</string>
    <string name="btn_login">Iniciar Sesion</string>
    <string name="btn_register">Registrarse</string>

    <!-- activity_product -->
    <string name="nombre_producto">Nombre</string>
    <string name="talla_producto">Talla única</string>
    <string name="compra_unica">Se limita la compra de un tipo de producto por persona</string>
    <string name="btn_carrito">Añadir al carrito</string>

    <!-- activity_publicacion -->
    <string name="nueva_publicacion">Nueva Publicación</string>
    <string name="descripcion">Descripción</string>
    <string name="btn_publicar">Publicar</string>

    <!-- activity_registro -->
    <string name="titulo_registro">¡Bienvenido!</string>
    <string name="eti_nombre_registro">Nombre completo</string>
    <string name="eti_email_registro">Email</string>
    <string name="eti_usuario_registro">Usuario</string>
    <string name="eti_contrasenya_registro">Contraseña</string>
    <string name="eti_confirmar_contrasenya_registro">Confirmar contraseña</string>
    <string name="btn_registro">Registrarse</string>
    <string name="btn_volver">Volver</string>

    <!-- fragment_datos_usuario -->
    <string name="btn_user_datos">Mis Datos</string>
    <string name="btn_user_pedidos">Mis Pedidos</string>
    <string name="btn_user_publicaciones">Mis Publicaciones</string>
    <string name="btn_user_cerrar_sesion">Cerrar Sesion</string>
    <string name="mi_cuenta">Mi Cuenta</string>

    <!-- fragment_ropa -->
    <string name="camisteas">Camisetas</string>
    <string name="sudaderas">Sudaderas</string>

    <!-- fragment_social -->
    <string name="btn_agregar_publi">Nueva publicacion</string>

    <!-- activity_carrito -->
    <string name="titulo_carrito">Carrito</string>
    <string name="checkout_carrito">Checkout</string>
    <string name="total_carrito">Total</string>
    <string name="comprar_carrito">Comprar</string>

    <!-- activity_panel -->
    <string name="panel">PANEL DE CONTROL</string>
    <string name="btn_panel_ventas">VENTAS</string>
    <string name="btn_panel_publicaciones">PUBLICACIONES</string>
    <string name="btn_panel_mas_producto">AÑADIR \n PRODUCTO</string>
    <string name="btn_panel_mod_producto">EDITAR \n PRODUCTO</string>
    <string name="btn_panel_usuarios">USUARIOS</string>
    <string name="btn_panel_cerrar_sesion">Cerrar Sesion</string>

    <!-- activity_mas_producto -->
    <string name="titlo_mas_producto">Añadir Producto</string>
    <string name="nombre_prod">Nombre</string>
    <string name="descripción_prod">Descripción</string>
    <string name="categoria_prod">Categoría</string>
    <string name="tallas_prod">Tallas</string>
    <string name="stock_prod">Stock</string>
    <string name="precio_prod">Precio</string>
    <string name="btn_guardar_prod">Guardar</string>

    <!-- activity_direccion_y_pago -->
    <string name="titulo_direccion">Dirección</string>
    <string name="titulo_pago">Pago</string>
    <string name="eti_calle_pago">Calle</string>
    <string name="eti_num_pago">Número</string>
    <string name="eti_ciudad_pago">Ciudad</string>
    <string name="eti_pais_pago">País</string>
    <string name="eti_cp_pago">Código Postal</string>
    <string name="eti_tarjeta_pago">Número tarjeta de crédito</string>
    <string name="btn_pagar">PAGAR</string>

    <!-- activity_mis_datos -->
    <string name="titulo_mis_datos">Mis Datos</string>
    <string name="btn_guardar_mis_datos">Guardar</string>
    <string name="atencion_cliente">Llama al 671 456 836 o escribe un correo a stylepeak@soporte.es</string>
    <string name="ayuda_cliente">¿Necesitas ayuda?</string>

    <!-- activity_mis_pedidos -->
    <string name="titulo_mis_pedidos">Mis Pedidos</string>

    <!-- activity_mis_publicaciones -->
    <string name="titulo_mis_publicaciones">Mis Publicaciones</string>
    <string name="btn_eliminar_publicacion">Eliminar</string>

    <!-- activity_ventas -->
    <string name="titulo_ventas">Ventas</string>

    <!-- activity_publiaciones -->
    <string name="titulo_publicaciones">Publicaciones</string>

    <!-- activity_mod_productos -->
    <string name="titulo_productos">Productos</string>

    <!-- activity_editar_eliminar_producto -->
    <string name="titlo_editar_producto">Editar Producto</string>

    <!-- activity_usuarios -->
    <string name="titlo_usuarios">Usuarios</string>

</resources>